# Nekomaru-LiveUI

./: .gitignore  .justfile  .mod.nu  Cargo.toml  FILE-OWNERSHIP.md  README.md  biome.json  mod.nu  package.json
.claude/: settings.json
.claude/commands/: catch-up.md  finish.md
app/: Cargo.toml
app/src/: lib.rs  main.rs
core/live-app/src/: main.rs
core/live-capture/: Cargo.toml
core/live-capture/src/: capture.rs  d3d11.rs  encoder.rs  lib.rs  main.rs
core/live-control/: Cargo.toml
core/live-control/src/: api.rs  (+5 more)
crates/enumerate-windows/: Cargo.toml
crates/enumerate-windows/src/: lib.rs  main.rs
crates/job-object/: Cargo.toml
docs/: M4-DESIGN.md  PLAN-UI-KPMMeter.md  Proposal-1-Streaming.md  README-Audio.md  README.md
frontend/: app.tsx  debug.ts  decoder.ts  global.css  global.effects.css  index.css  index.html  index.ts  index.tsx  package.json  renderer.tsx  streamDecoder.ts  streamRenderer.tsx  svelte.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  KpmMeter.svelte  api.ts  app.tsx  capture.ts  events.svelte.ts  kpm-loop.ts  kpm.tsx  streamRenderer.tsx  streams.svelte.ts  streams.ts  strings-api.ts  strings-loop.ts  strings.svelte.ts  strings.ts  ws.ts  youtube-music.ts
live-app/src/: main.rs
live-audio/: Cargo.toml
live-audio/src/: lib.rs  main.rs
live-capture/: Cargo.toml
live-capture-youtube-music/: Cargo.toml
live-capture-youtube-music/src/: crop.rs  main.rs
live-capture/src/: capture.rs  lib.rs  main.rs
live-kpm/: Cargo.toml
live-kpm/src/: calculator.rs  hook.rs  lib.rs  main.rs
live-protocol/: Cargo.toml
live-protocol/src/: audio.rs  avcc.rs  lib.rs  video.rs
live-server/: Cargo.toml
live-server/src/: audio.rs  constant.rs  events.rs  events_ws.rs  kpm.rs  main.rs  message_pump.rs  selector.rs  state.rs  strings.rs  util.rs  video.rs  vite_proxy.rs  windows.rs
live-server/src/audio/: buffer.rs  mod.rs  process.rs  routes.rs  ws.rs
live-server/src/kpm/: hook.rs  mod.rs  process.rs  ws.rs
live-server/src/selector/: config.rs  manager.rs  mod.rs  routes.rs
live-server/src/strings/: routes.rs  store.rs  ws.rs
live-server/src/video/: buffer.rs  mod.rs  process.rs  routes.rs  ws.rs
live-server/src/youtube_music/: manager.rs
live-server/src/ytm/: manager.rs  mod.rs
live-video/: Cargo.toml
live-video/src/: converter.rs  lib.rs  main.rs  resample.rs
live-ws/: Cargo.toml
live-ws/src/: main.rs
server/: api.ts  audio-api.ts  audio.ts  buffer.ts  common.ts  index.ts  kpm.ts  log.ts  package.json  persist.ts  process.ts  protocol.ts  selector.ts  strings.ts  tsconfig.json  youtube-music.ts
server/src/: codec.ts  core.ts  index.ts  kpm.ts  log.ts  persist.ts  protocol.ts  selector.ts  strings.ts  video.ts
service/capture/: Cargo.toml
service/capture/src/: encoder.rs  lib.rs  main.rs  resample.rs
service/capture/src/encoder/: debug.rs  helper.rs
service/control/: Cargo.toml
src/: app.rs  capture.rs  converter.rs  encoder.rs  encoding_thread.rs  main.rs  resample.rs  stream.rs
src/app/: capture_selector.rs  helper.rs
src/encoder/: debug.rs  helper.rs
(+37 files in other folders)
