[package]
name = "live-capture-youtube-music"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
enumerate-windows = { workspace = true }
job-object = { workspace = true }
set-dpi-awareness = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
euclid = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
