[package]
name = "live-kpm"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
live-protocol = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
