[package]
name = "live-server"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
live-protocol = { workspace = true }
job-object = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
log = { workspace = true }
pretty_env_logger = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tap = { workspace = true }
