[package]
name = "live-ws"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
live-protocol = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
