[package]
name = "enumerate-windows"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
set-dpi-awareness = { path = "../set-dpi-awareness" }
windows = { workspace = true, features = [
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
